# WorldAlphabets

./: .eslintrc.js  .gitignore  AGENTS.md  MANIFEST.in  README.md  WorldAlphabets.sln  debug_abkhazian.py  debug_detection.py  debug_detection_node.js  debug_freq_dir.py  enhanced_detect.py  index.d.ts  index.esm.js  index.js  index.mjs  jest.config.cjs  keyboards.d.ts  keyboards.js  package-lock.json  package.json  performance_comparison.md  performance_test.js  pyproject.toml  requirements-dev.txt  set_env.ps1  table.md  test_bashkir.py  test_detection_with_freq.py  test_detection_without_freq.js  test_detection_without_freq.py  test_enhanced_detection_final.js  test_enhanced_detection_final.py  test_webui_console.js  test_webui_detection.html  web_performance_test.html
.github/workflows/: build-top200.yml  c-library.yml  deploy-pages.yml  dotnet.yml  lint-and-test.yml  npm-publish.yml  nuget-publish.yml  publish.yml
__tests__/: test_helpers.py  worldalphabets.test.js
c/: CMakeLists.txt
c/include/: worldalphabets.h
c/src/: worldalphabets.c
c/tests/: smoke.c
data/: char_index.json  commonvoice_languages.json  freq_index.json  index.json  kbdlayouts.json  language_registry.json  language_scripts.json  script_index.json  scripts.json  stats.json  todo_languages.csv  tts_index.json  unsupported_translations.json
data/aae/: metadata.json
data/aar/: SOURCE.txt  metadata.json
data/aat/: metadata.json
data/aau/: metadata.json
data/abk/: SOURCE.txt  metadata.json
data/abq/: metadata.json
data/abr/: metadata.json
data/abx/: metadata.json
data/ace/: metadata.json
data/acf/: metadata.json
data/ach/: metadata.json
data/acr/: metadata.json
data/ada/: metadata.json
data/adx/: metadata.json
data/ady/: metadata.json
data/aeb/: metadata.json
data/afh/: metadata.json
data/afr/: SOURCE.txt  metadata.json
data/agi/: metadata.json
data/agj/: metadata.json
data/agq/: SOURCE.txt  metadata.json
data/agu/: metadata.json
data/agx/: metadata.json
data/ahk/: metadata.json
data/aho/: metadata.json
data/aht/: metadata.json
data/aig/: metadata.json
data/aii/: metadata.json
data/ain/: metadata.json
data/aiw/: metadata.json
data/ajg/: metadata.json
data/aji/: metadata.json
data/aka/: SOURCE.txt  metadata.json
data/akk/: metadata.json
data/akl/: metadata.json
data/akz/: metadata.json
data/alc/: metadata.json
data/ale/: metadata.json
data/alh/: metadata.json
data/aln/: metadata.json
data/alphabets/: aa-Latn.json  aar-Latn.json  ab-Cyrl.json  ab.json  abk-Cyrl.json  ady-Cyrl.json  af-Latn.json  af.json  agq-Latn.json  ak-Latn.json  ak.json  aka-Latn.json  am-Ethi.json  am.json  amh-Ethi.json  an-Latn.json  ar-Arab.json  ar.json  arn-Latn.json  as-Beng.json  as.json  asa-Latn.json  ast-Latn.json  ast.json  ay-Latn.json  ay.json  az-Cyrl.json  az-Latn.json  az.json  aze-Latn.json  ba-Cyrl.json  ba.json  bal-Arab.json  bal-Latn.json  ban-Latn.json  ban.json  bas-Latn.json  bax-Bamu.json  bax.json  be-Cyrl.json  (+539 more)
data/alq/: metadata.json
data/alr/: metadata.json
data/als/: metadata.json
data/alt/: metadata.json
data/alw/: metadata.json
data/amg/: metadata.json
data/amh/: SOURCE.txt  metadata.json
data/ami/: metadata.json
data/amj/: metadata.json
data/anc/: metadata.json
data/ang/: metadata.json
data/ani/: metadata.json
data/ank/: metadata.json
data/anm/: metadata.json
data/anp/: metadata.json
data/anu/: metadata.json
data/anz/: metadata.json
data/aoa/: metadata.json
docs/: DATA_PIPELINE.md  DATA_SOURCES_LICENSES.md  detect.md  keyboards.md
examples/: keyboard_md_table.py
scripts/: add_iso_codes.py  backfill_legacy_frequency.py  batch_process_commonvoice.py  build_all_data.py  build_alphabet_from_cldr.py  build_comprehensive_alphabets.py  build_data_pipeline.py  build_top200_unified.py  create_index.js  create_index.py  expand_to_top1000.py  extract_alphabets.py  fetch_commonvoice.py  fetch_language_scripts.py  fetch_leipzig_corpora.py  generate_alphabet_from_freq.py  generate_alphabet_from_locale.py  generate_alphabet_from_unigrams.py  generate_audio.py  generate_browser_freq.js  generate_browser_index_mjs.js  generate_browser_modules.js  generate_c_library_data.py  generate_char_index.py  generate_frequency_from_text.py  generate_missing_alphabets.py  generate_sherpa_audio_all_models.py  generate_table.py  generate_translations.py  index_tts.py  missing_unigram_languages.py  populate_layouts.py  rebuild_audio_index.py  split_alphabets_by_script.py  sync_package_data.py  update_frequencies.py  verify_browser_esmbuild.mjs
tests/: browser.esm.detect.all.test.mjs  detect.test.js  diacritics.test.js  integration.test.js  keyboards.test.js  test_alphabets.py  test_detect_freq.py  test_detect_languages.py  test_detection_hello_samples.py  test_diacritics.py  test_integration.py  test_keyboards.py  test_word_based_priority.py
web/: README.md  app.js  index.html  package-lock.json  package.json  style.css  test-fix.html  vite.config.js
worldalphabets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+3252 files in other folders)
