[project]
name = "worldalphabets"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "lxml>=4.9.0",
    "lxml-stubs>=0.5.0",
    "build>=0.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "langcodes>=3.3.0",
    "types-requests",
    "types-beautifulsoup4",
]

[project.scripts]
wa-populate-layouts = "scripts.populate_layouts:main"
wa-build-layouts = "tools.build_layouts:main"
wa-validate-layouts = "tools.validate_layouts:main"
wa-scrape-layouts = "tools.scrape_kbdlayout_info:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "langcodes"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
