[project]
name = "worldalphabets"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "beautifulsoup4>=4.13.5",
    "py3-tts-wrapper[elevenlabs,google,microsoft,openai,polly,sherpaonnx,watson,witai]>=0.10.22",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "lxml>=4.9.0",
    "lxml-stubs>=0.5.0",
    "build>=0.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "langcodes>=3.3.0",
    "types-requests",
    "types-beautifulsoup4",
    "py3-tts-wrapper[google,watson,polly,microsoft,elevenlabs,witai,sherpaonnx,openai]",
    "PyICU>=2.11",
]

[project.scripts]
wa-build-alphabets = "scripts.build_alphabet_from_cldr:main"
wa-create-index = "scripts.create_index:main"
wa-generate-audio = "scripts.generate_audio:main"
wa-populate-layouts = "scripts.populate_layouts:main"
wa-build-layouts = "tools.build_layouts:main"
wa-validate-layouts = "tools.validate_layouts:main"
wa-scrape-layouts = "tools.scrape_kbdlayout_info:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "langcodes"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tts_wrapper"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250809",
]
